<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".activity.ChangePasswordActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/changePasswordProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fo_outfit_extrabold"
            android:text="@string/change_password"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/fo_outfit_regular"
            android:text="@string/password"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/changePasswordPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:autofillHints="password"
            android:background="@drawable/rect_15dp"
            android:backgroundTint="@color/grey10"
            android:fontFamily="@font/fo_outfit_regular"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/fo_outfit_regular"
            android:text="@string/confirm_password"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordPasswordEditText" />

        <EditText
            android:id="@+id/changePasswordConfirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:autofillHints="password"
            android:background="@drawable/rect_15dp"
            android:backgroundTint="@color/grey10"
            android:fontFamily="@font/fo_outfit_regular"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView24"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changePasswordNextBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rect_15dp"
            android:backgroundTint="@color/m1"
            android:fontFamily="@font/fo_outfit_medium"
            android:gravity="center"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordConfirmPasswordEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>