<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/mainContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mainBottomNavView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rect_35dp"
        app:backgroundTint="@color/grey5"
        app:elevation="8dp"
        app:itemGravity="center"
        app:itemIconSize="16dp"
        android:outlineSpotShadowColor="@color/transparent"
        app:itemIconTint="@color/bottom_nav_item_color"
        app:itemTextColor="@color/bottom_nav_item_color"
        app:labelFontScalingEnabled="false"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainVoiceActionFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/voice_input"
        app:backgroundTint="@color/m1"
        app:layout_constraintBottom_toTopOf="@+id/mainBottomNavView"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_microphone" />

    <EditText
        android:id="@+id/mainPromptEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:autofillHints="@null"
        android:background="@drawable/rect_15dp"
        android:backgroundTint="@color/grey10"
        android:clickable="false"
        android:drawableStart="@drawable/ic_ai"
        android:drawablePadding="8dp"
        android:drawableTint="@color/grey"
        android:focusable="false"
        android:hint="@string/plan_something"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minHeight="55dp"
        android:paddingHorizontal="16dp"
        android:textColorHint="@color/grey"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mainVoiceActionFab"
        app:layout_constraintEnd_toStartOf="@+id/mainVoiceActionFab"
        app:layout_constraintStart_toStartOf="@+id/mainBottomNavView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainChatToggleFob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/toggle_chat"
        app:backgroundTint="@color/m2"
        app:layout_constraintBottom_toTopOf="@+id/mainVoiceActionFab"
        app:layout_constraintEnd_toEndOf="@+id/mainVoiceActionFab"
        app:layout_constraintStart_toStartOf="@+id/mainVoiceActionFab"
        app:srcCompat="@drawable/ic_ai" />

</androidx.constraintlayout.widget.ConstraintLayout>